@@ -760,6 +760,8 @@ Version 7.0  [ TODO ]
               MatrixBool.
             - Routine writeMatrix() is now deprecated, since it is
               identical to writeTextLong().
+            - Replaced the type alias Coefficient with the standard container
+              type alias value_type.  Coefficient is now deprecated.
         Class Matrix2:
             - Added member and global swap() functions.
             - Re-engineered to use std::array internally.  This means
